# aa

./: .gitignore  .gitt.kate-swp  2018 kira gelir vergisi hesap.ods  2019 vergi iade düzeltme dilekçesi.odt  Atila Balcı is makinasi kiralama sozlesmesi.docx  README.md  adb.file  arac-kiralama-sozlesme.doc  b.c  door sanayi.blend  door sanayi2.blend  door sanayi2.blend1  door sanayi3.blend  door sanayi3.blend1  envanter.ods  gitt  gittt  hacı murat balcı.xcf  is-makinasi-kiralama-sozlesmesi.docx  kira söz.odt  neroperi.docx  stackoverflow  unsaved file 1
.ssh/: id_ed25519  id_ed25519.pub  known_hosts
Gloss/: BUYUK_ENGLISH_TURKISH_MUHENDIS.BGL  Babylon_Dictionary_Ind_Erzin_English_to_Turkish.BGL  English2Turkish.BGL  English_T_rk_e_S_zl_k.BGL  Erzin_English_Turkish_Dictiona.BGL  Magnetron_s_Turkish2English.BGL  Mustafa_YILDIZ_s_English_to_Tu.BGL  Mustafa_YILDIZ_s_Turkish_to_En.BGL  Technical___Contractual_Dictio.BGL  saja_english_to_turkish_dictio.BGL  saja_turkish___english_diction.BGL
KKTC/: nero kimlik.odt
aa/: VTKontrol.cpp  aa.pro  aa.pro.user.4.8-pre1  aa.pro.user.b7c5545.20  bkm.h.autosave  clsn.cpp  clsn.h  cw  cw_.ui  cw_ambar.cpp  cw_ambar.h  cw_cns.cpp  cw_cns.h  cw_fr.cpp  cw_fr.h  cw_fr.ui  cw_ftr.cpp  cw_ftr.cpp.autosave  cw_ftr.h  cw_gelir.cpp  cw_gelir.h  cw_grs.cpp  cw_grs.h  cw_hkk.cpp  cw_hkk.h  cw_hkk.ui  cw_isemri.cpp  cw_isemri.h  cw_mkcins.cpp  cw_mkcins.h  cw_mkn.cpp  cw_mkn.h  cw_mlzm.cpp  cw_mlzm.h  cw_per.cpp  cw_per.h  cw_per_map.cpp  dbase.cpp  dbase.h  dbase.ui  (+70 more)
atv/: .~lock.altivarayarlar.odt#  (+1 more)
prj_Qt/designStdy/cppdemoproject/: CMakeLists.txt  cppbackend.cpp  cppbackend.h  main.cpp  qdsimports.qrc
prj_Qt/designStdy/cppdemoproject/qml/: MainForm.ui.qml  main.qml  qdsproject.qmlproject  qdsproject.qmlproject.qtds  qml.qrc
prj_Qt/designStdy/cppdemoproject/qml/WashingMachineHome/: ArcDial.ui.qml  MainFile.ui.qml  SpinIcon.ui.qml  TimerElement.ui.qml
prj_Qt/designStdy/cppdemoproject/qml/imports/qdsproject/: Constants.qml
prj_Qt/designStdy/cppdemoproject/qml/imports/qdsproject/designer/: plugin.metainfo
prj_Qt/designStdy/cppdemoproject/qml/mockImports/backend/: BackendObject.qml  qmldir
projects/newbuilder/src/: main.c  meson.build  newbuilder-window.c  newbuilder-window.h  newbuilder-window.ui  newbuilder.gresource.xml
(+4592 files in other folders)
